Labo 3 – Exposition d’une API RESTful pour un système multi-magasins
